[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "ElectroMagneticPython"
dynamic = ["version"]
requires-python = ">=3.10"
description = "EMpy - ElectroMagnetic Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lorenzo Bolla", email = "code@lbolla.info" }]
urls = { Homepage = "http://lbolla.github.io/EMpy/", Repository = "https://github.com/lbolla/EMpy" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = ["numpy>=1.18", "scipy>=1.7", "matplotlib>=3.1"]

[dependency-groups]
dev = [
  { include-group = "format" },
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "release" },
]
format = ["black>=24.10.0"]
lint = [
  "flake8>=7.1.1",
  "mypy-extensions>=1.0.0",
  "mypy>=1.14.1",
  "pyflakes>=3.2.0",
]
test = ["pytest>=8.3.4"]
release = ["bump2version>=1.0.1"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
write_to = "EMpy/version.py"
write_to_template = 'version = "{version}"'
local_scheme = "no-local-version"

[tool.uv]
default-groups = "all"
